--- a/composer.json
+++ b/composer.json
@@ -38,6 +38,7 @@
     "symfony/event-dispatcher": "^4",
     "nextcloud/ocp": "dev-stable29",
     "psalm/phar": "^6",
+    "guzzlehttp/guzzle": "^7",
     "phpunit/phpunit": "^10"
   },
   "extra": {
