--- a/.github/workflows/krankerl-build.yml
+++ b/.github/workflows/krankerl-build.yml
@@ -25,6 +25,11 @@ jobs:
       - name: Show version
         run: echo "Version=${{ steps.getxml.outputs.info }}"
 
+      - name: Prepare build folder
+        run: |
+            mkdir -p build/artifacts
+            sudo chown -R 1000:1000 build
+
       - name: Run build script
         run: |
           ./build_with_docker.sh krankerl
