--- a/.github/workflows/krankerl-build.yml
+++ b/.github/workflows/krankerl-build.yml
@@ -42,7 +42,7 @@ jobs:
         uses: softprops/action-gh-release@v2
         with:
           tag_name: v${{ steps.getxml.outputs.info }}
-          name: Release v${{ steps.getxml.outputs.info }}
+          name: v${{ steps.getxml.outputs.info }}
           draft: false
           prerelease: false
           files: build/artifacts/user_oidc.tar.gz
